Introduce API rate limiting; refactor IP rate limiting
* Introduce ApiKeyIndexRotator that rotates API key index using caching

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -2,3 +2,5 @@ invalidJson=Invalid request body. Check your JSON again.
 resourceNotFound=Resource not found. Check your endpoint URL again.
 internalServerError=Internal server error. Please contact your administrator for more details.
 badRequest=Bad request
+rateLimitSixtyCallsPerMinute=Rate limit 60 calls per minute
+rateLimitOneMillionCallsPerMonth=Rate limit 1,000,000 million calls per month
